# syringe-pump

./: .gitignore  .gitmodules  .readthedocs.yml  LICENSE  README.md  license.txt  versions.json
2D CAD/: lasercut_parts.ai  lasercut_parts.dxf  motor mount.ai  motor mount.dxf  ponoko order.dxf  syringe frame.ai  syringe frame.dxf
2d_cad/: clamp_plunger.dxf
3D CAD/: 8mm shaft.ipt  ACME rod.ipt  PCB.ipt  Syringe assembly.iam  Syringe assembly.stl  acme nut.ipt  barrel_motor_mount.stl  carriage.ipt  carriage.stl  clamp.ipt  end cap.ipt  end_support.stl  linear bearing.ipt  motor mount.ipt  motor.ipt  neck support.ipt  reed_switch.ipt  shaft support.ipt  syringe inner.ipt  syringe outer.ipt
3d_cad/: syringe_board.step
Documentation Source/: Makefile
PCB/: syringe board 1.4.brd  syringe board 1.4.sch  syringe board 1.6.brd  syringe board 1.6.sch  syringe board 2.1.brd  syringe board 2.1.sch
Software/: launch notebook_mac  launch notebook_windows.bat  resolution calculation.ipynb
doc_src/: make.bat
docs/: .buildinfo  404.html  assembly.html  bom.html  controller.html  frame.html  genindex.html  index.html  license.html  manual.html  objects.inv  (+4 more)
mkdocs/: mkdocs.yml  pyproject.toml  readme.md
mkdocs/overrides/partials/: nav.html
mkdocs/src/: _extra.css  electronics.md  frame.md  further.md  hardware.md  index.md  mechanical.md  motor.md
mkdocs/src/electronics/: syringe_pump_device.py
mkdocs/src/hardware/cad/: base_v79_tapped_holes.dxf
mkdocs/src/mechanical/cad/: carriage_v81.step  clamps.dxf  cradle_v118.step
mkdocs/src/stylesheets/: extra.css
(+162 files in other folders)
