[project]
name = "mkdocs-template"
version = "0.1.0"
description = "A template for documenting open hardware using MkDocs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-include-markdown-plugin>=7.0.0",
    "mkdocs-material>=9.5.44",
]
